syntax = "proto3";

package product;
option go_package = "../model";

message Filename {
    string file_name = 1;
}

message Product {
    string id = 1;
    string version = 2;
    string vcs = 3;
    string description = 4;
    string comment = 5;
    string home_page_url = 6;
    string external_ref = 7;
    repeated Component components = 8;
    string usage_types = 9;
    string clearing_state = 10;
    string dep_graph = 11;
    string infrastructure = 12;
}

message Component {
    string id = 1;
    string name = 2;
    string package = 3;
    string version = 4;
    License license = 5;
}

message License {
    string id = 1;
    string declared_license = 2;
    string concluded_license = 3;
}

message Response {
    bool created = 1;
    Product product = 2;
    repeated Product products = 3;
}

message GerRequest {}

service ProductService {
    rpc GetProducts(GerRequest) returns(Response) {}
}

